# rssbot

./: Cargo.toml  Dockerfile
src/: bot.rs  cmdhandles.rs  fetcher.rs  main.rs  utils.rs  utlis.rs
