[package]
name = "rssbot"
version = "2.0.0"
authors = ["iovxw <iovxw@outlook.com>"]
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/iovxw/rssbot"
repository = "https://github.com/iovxw/rssbot"
publish = false
edition = "2018"

[workspace]

[dependencies]
log = "0.4"
env_logger = "0.5"
lazy_static = "1.1"
failure = "0.1"
regex = "1.0"
pinyin-order = "0.1"
quick-xml = "0.13"
chrono = "0.4"
tokio = { version = "0.1", features = ["async-await-preview"]  }
tokio-async-await = "0.1"
futures = "0.1"
hyper = "0.12"
hyper-rustls = "0.14"
http = "0.1"
bytes = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
telegram_types = "0.2"
